[package]
name = "tlsn-revolut"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.42"
http-body-util = "0.1.3"
hyper = "1.6.0"
macro_rules_attribute = "0.2.2"
pem = "3.0.5"
pest_derive = "2.8.1"
pest = "2.8.1"
reqwest = "0.12.22"
serde_json = "1"
serde = "1"
smol-hyper = "0.1.1"
tokio = "1"
bcs = { version = "0.1" }
smol-macros = "0.1.1"
smol = "2.0.2"
thiserror = "2.0.12"
rs_merkle = { git = "https://github.com/tlsnotary/rs-merkle.git", rev = "85f3e82" }
# tlsn-common = { git = "https://github.com/anhelinakruk/tlsn", tag = "v0.1.0-alpha.12", version = "0.1.0-alpha.12" }
# tlsn-core = { git = "https://github.com/anhelinakruk/tlsn", tag = "v0.1.0-alpha.12", version = "0.1.0-alpha.12" }
# tlsn-prover = { git = "https://github.com/anhelinakruk/tlsn", tag = "v0.1.0-alpha.12", version = "0.1.0-alpha.12" }
# tlsn-verifier = { git = "https://github.com/anhelinakruk/tlsn", tag = "v0.1.0-alpha.12", version = "0.1.0-alpha.12" }
# notary-client = { git = "https://github.com/anhelinakruk/notary", branch = "main" }
# tls-core = { git = "https://github.com/anhelinakruky/tlsn", tag = "v0.1.0-alpha.12", version = "0.1.0-alpha.12", package = "tlsn-tls-core" }
tlsn-common = { git = "https://github.com/anhelinakruk/tlsn", branch = "feat/logs" }
tlsn-core = { git = "https://github.com/anhelinakruk/tlsn", branch = "feat/logs" }
tlsn-prover = { git = "https://github.com/anhelinakruk/tlsn", branch = "feat/logs" }
tlsn-verifier = { git = "https://github.com/anhelinakruk/tlsn", branch = "feat/logs" }
notary-client = { git = "https://github.com/anhelinakruk/notary", branch = "main" }
tls-core = { git = "https://github.com/anhelinakruk/tlsn", branch = "feat/logs", package = "tlsn-tls-core" }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
url = "2.5.4"
bincode = { version = "1.3.3" }
regex = "1.11.1"
hex = "0.4.3"
anyhow = "1.0.98"
noir = { git = "https://github.com/piotr-stec/noir-rs", branch = "add/keccak-flavor-bindings", features = [
  "barretenberg",
] }


[dev-dependencies]
serde_json = "1.0.142"
